[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Prefabs/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Prefabs/Oponnent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Prefabs/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Scripts/GameManager.gd" type="Script" id=4]

[sub_resource type="GDScript" id=3]
script/source = "extends Area2D

var points = 0



func _on_Wall_Right_area_entered(area: Area2D) -> void:
	print(\"here\")
	if area.name == \"Ball\":
		print(\"pass\")
"

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 300, 10 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 400, 10 )

[node name="MainLevel" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 800.0
margin_bottom = 600.0
color = Color( 0, 0.176471, 0.247059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoalRight" type="Area2D" parent="."]
position = Vector2( 810, 300 )
rotation = -1.5708
script = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalRight"]
shape = SubResource( 2 )

[node name="GoalLeft" type="Area2D" parent="."]
position = Vector2( -10, 300 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoalLeft"]
shape = SubResource( 2 )

[node name="Celling" type="KinematicBody2D" parent="."]
position = Vector2( 400, -10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Celling"]
shape = SubResource( 1 )

[node name="Floor" type="KinematicBody2D" parent="."]
position = Vector2( 400, 610 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 50, 300 )

[node name="Oponnent" parent="." instance=ExtResource( 2 )]
position = Vector2( 750, 300 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 400, 300 )

[node name="TextRight" type="Label" parent="."]
margin_left = 599.0
margin_right = 799.0
margin_bottom = 50.0
text = "SCORE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextLeft" type="Label" parent="."]
margin_right = 200.0
margin_bottom = 50.0
text = "SCORE"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="GoalRight" to="." method="_on_GoalRight_body_entered"]
[connection signal="body_entered" from="GoalLeft" to="." method="_on_GoalLeft_body_entered"]
